[workspace]
members = [
    "common",
    "playground",
#    "find_web3_tx",
    "get_started",
    "learn_bytes",
#    "send_pulsar",
#    "use_rocksdb",
    "pg_sql",
    "pg_iter",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["me <me@gmail.com>"]
edition = "2021"
homepage = "https://github.com/"
repository = "https://github.com/"
license = "MIT"

[workspace.dependencies]
log = { version = "0.4.20", features = ["release_max_level_info"] }
chrono = { version = "0.4.33", default-features = false, features = [
    "clock",
    "serde",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
env_logger = "0.11.1"
dotenvy = "0.15.7"

[workspace.lints.rust]
#unused_imports = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
