[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
file-logger = ["dep:flexi_logger"]
tracing = ["dep:tracing-appender", "dep:tracing-subscriber", "dep:tracing", "dep:tracing-rolling-file"]
web3 = ["dep:ethers"]
pulsar = ["dep:pulsar", "dep:schemars"]
preserve_order = ["serde_json/preserve_order", "schemars?/preserve_order"]
pg = ["dep:deadpool-postgres", "dep:tokio-postgres"]
pg-with-model = ["pg", "dep:postgres-from-row"]
pg-with-enum = [
    "pg-with-model",
    "dep:duplicate",
    "dep:strum",
    "dep:serde_with",
    "dep:num_enum",
    "dep:serde_repr",
]

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
envy = "0.4.2"

flexi_logger = { version = "0.29.0", optional = true }

#tracing-appender = { package = "clia-tracing-appender", version = "0.2.5", optional = true }
#time = { version = "0.3.31", features = ["formatting", "macros"] }
tracing-rolling-file = { version = "0.1.2", optional = true  }
tracing-subscriber = { version = "0.3.18", features = ["local-time", "chrono"], optional = true }
tracing-appender = {  version = "0.2.3", optional = true }
tracing = { version = "0.1.40", optional = true }

deadpool-postgres = { version = "0.14.0", optional = true }
tokio-postgres = { version = "0.7.12", optional = true, features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }

postgres-from-row = { version = "0.5.2", optional = true }
strum = { version = "0.26.3", features = ["derive"], optional = true }
serde_with = { version = "3.9.0", optional = true }
num_enum = { version = "0.7.3", optional = true }
serde_repr = { version = "0.1.19", optional = true }
duplicate = { version = "2.0.0", optional = true }

ethers = { version = "2.0.14", default-features = false, optional = true, features = [
    "abigen",
    "legacy",
    "openssl",
] }

pulsar = { version = "6.3.0", default-features = false, optional = true, features = [
    "tokio-runtime",
    "compression",
] }
schemars = { version = "0.8.21", optional = true }
