[package]
name = "find_web3_tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono-tz = "0.10.0"
anyhow = "1.0.89"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
async-channel = "2.3.1"
reqwest = { version = "=0.11.27", features = ["json", "gzip"] }
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "legacy"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono"] }
futures-util = "0.3.30"
common = { path = "../common", features = ["web3"] }

[lints]
workspace = true
