[package]
name = "resend_exploer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["release_max_level_info"] }
chrono = { version = "0.4.33", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.8.5"
anyhow = "1.0.79"
once_cell = "1.19.0"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.30"
async-channel = "2.1.1"

tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "with-chrono-0_4"] }
pulsar = { version = "6.1.0", default-features = false, features = ["tokio-runtime", "compression"] }
ethers = { version = "2.0.13", default-features = false, features = ["abigen", "legacy", "openssl"] }

common = { path = "../common", features = ["file-logger", "pg-with-enum", "web3", "pulsar", "preserve_order"] }

[lints]
workspace = true
