[package]
name = "use_rocksdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1.0"
rocksdb = "0.22.0"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
